# Fork

./: .gitignore  .pnp.cjs  AGENTS.md  AGENT_SYNOPSIS.html  AGENT_SYNOPSIS.md  Cargo.toml  INSTALLING.md  README.md  THIRD_PARTY_NOTICES.md  WEB_UI_TRACKER.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.beads/: issues.jsonl
crates/fork_core/: ARCHITECTURE.md  Cargo.toml  temp_periodic.rs
crates/fork_core/src/: analysis.rs  autodiff.rs  continuation.rs  equation_engine.rs  equilibrium.rs  event_series.rs  forced_response.rs  isocline.rs  lib.rs  solvers.rs  state_periodicity.rs  traits.rs
crates/fork_core/src/continuation/: equilibrium.rs  heteroclinic.rs  heteroclinic_events.rs  heteroclinic_shooting.rs  heteroclinic_transport.rs  homoclinic.rs  homoclinic_events.rs  homoclinic_init.rs  homoclinic_shooting.rs  homotopy_saddle.rs  manifold.rs  map_normal_forms.rs  packed_periodic_source.rs  periodic.rs  periodic_normal_forms.rs  periodic_schur.rs  problem.rs  types.rs  util.rs
crates/fork_core/tests/: adaptive_pd_reference.rs  automatic_cycle_fold_detection.rs  codim2_metadata.rs  equilibrium_codim2_branching.rs  heteroclinic_reference.rs  homoclinic_reference.rs  map_normal_forms.rs  map_ns_curve.rs  packed_periodic_source.rs  periodic_normal_forms.rs  published_cycle_references.rs
crates/fork_wasm/: Cargo.toml
crates/fork_wasm/pkg-web/: fork_wasm.d.ts  fork_wasm.js  fork_wasm_bg.wasm  fork_wasm_bg.wasm.d.ts  package.json
crates/fork_wasm/src/: analysis.rs  equilibrium.rs  event_series.rs  forced_response.rs  lib.rs  system.rs
(+442 files in other folders)
